murano-apps (0.5-1) unstable; urgency=low

  * Initial release

 -- dteselkin <dteselkin@mirantis.com>  Mon, 05 May 2014 18:05:03 +0300